update remote commands

--- a/etc/internal_options.conf
+++ b/etc/internal_options.conf
@@ -1,4 +1,4 @@
-# internal_options.conf, Daniel B. Cid (dcid @ ossec.net).
+e internal_options.conf, Daniel B. Cid (dcid @ ossec.net).
 #
 # DO NOT TOUCH THIS FILE. The default configuration
 # is at ossec.conf. More information at:
@@ -84,7 +84,7 @@ logcollector.loop_timeout=2
 logcollector.open_attempts=8
 
 # Logcollector - If it should accept remote commands from the manager
-logcollector.remote_commands=0
+logcollector.remote_commands=1
 
 # Logcollector - Number of readings before checking files
 logcollector.vcheck_files=64
@@ -327,7 +327,7 @@ wazuh_db.rlimit_nofile=65536
 
 
 # Wazuh Command Module - If it should accept remote commands from the manager
-wazuh_command.remote_commands=0
+wazuh_command.remote_commands=1
 
 # Wazuh default stack size for child threads in KiB (2048..65536)
 wazuh.thread_stack_size=8192
